tests/ui/consts/const-eval/mod-static-with-const-fn.stderr
error[E0080]: could not evaluate static initializer
  --> $DIR/mod-static-with-const-fn.rs:16:5
   |
LL |     *FOO.0.get() = 5;
   |     ^^^^^^^^^^^^^^^^ modifying a static's initial value from another static's initializer

error: aborting due to previous error

For more information about this error, try `rustc --explain E0080`.
